--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/breeze": "^1.29",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-medialibrary": "^11.12",
+        "spatie/laravel-permission": "^6.17",
+        "spatie/laravel-sluggable": "^3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
